fix: sitename is not centered at internet explorer

--- a/sass/foundation/_layout.scss
+++ b/sass/foundation/_layout.scss
@@ -49,7 +49,7 @@ $margin: 2rem;
     left: 0;
     margin: auto;
     height: $line-height-base * 1em;
-    width: auto;
+    width: 100%;
     font-size: 10vmin;
     text-align: center;
 
